<resources>
    <string name="app_name">Phone Article</string>
    <string name="phone_name">Nama HP</string>
    <string name="description">Deskripsi</string>
    <string-array name="data_name">
        <item>Asus ROG Phone 6 Series</item>
        <item>Asus Zenfone 9</item>
        <item>Infinix Zero 5G 2023</item>
        <item>Poco M5</item>
        <item>iPhone 14 Pro/ Pro Max</item>
        <item>Samsung Galaxy A54 5G</item>
        <item>Samsung Galaxy S21 FE</item>
        <item>Samsung Galaxy S23 Ultra</item>
        <item>Samsung Galaxy Z Flip 4</item>
        <item>Vivo V23 5G</item>
    </string-array>
    <string name="price">Harga</string>
    <string name="profile">Maulana Fajar Lazuardi</string>
    <string name="email">bojongpulo@gmail.com</string>
    <string name="about">Hello, I am a passionate Android Developer!</string>
    <string name="portfolio">Portfolio</string>
</resources>