<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ProvileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/project" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/profile_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/about"
            android:textSize="16sp" />

        <Button
            android:id="@+id/portfolio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_bio"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/portfolio"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>
